wip better responsiveness

--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -1,7 +1,8 @@
-@import './layout/base';
-@import './layout/content';
-@import './layout/main';
-@import './layout/sidebar';
-@import './layout/topbar';
-@import './layout/section';
-@import './layout/footer';
+@import "./base/breakpoints";
+@import "./layout/base";
+@import "./layout/content";
+@import "./layout/main";
+@import "./layout/sidebar";
+@import "./layout/topbar";
+@import "./layout/section";
+@import "./layout/footer";
