--- a/src/styles/base/layout/_content.scss
+++ b/src/styles/base/layout/_content.scss
@@ -3,5 +3,9 @@
   padding-bottom: $default_padding;
   padding-left: 15px;
   flex: 1;
-  max-width: calc(100% - 320px);
+  max-width: calc(100% - 60px);
+
+  @include breakpoint(lg) {
+    max-width: calc(100% - 320px);
+  }
 }
