--- a/src/styles/base/layout/_topbar.scss
+++ b/src/styles/base/layout/_topbar.scss
@@ -2,7 +2,11 @@
   display: flex;
   width: 100%;
   background-color: $white;
-  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(248,249,250,1) 100%); 
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(248, 249, 250, 1) 100%
+  );
   box-shadow: $dark_shadow;
   height: $topbar_height;
   max-height: $topbar_height;
@@ -37,17 +41,22 @@
       align-items: center;
       justify-content: center;
       padding: 0 20px;
-    
-      a {
+
+      span {
         text-decoration: none;
         color: $black;
+        display: none;
+
+        @include breakpoint(lg) {
+          display: block;
+        }
       }
     }
-  
+
     &-item {
       height: 100%;
       font-weight: 700;
-    
+
       .dropdown-menu {
         padding: 0;
         margin: 0;
@@ -55,7 +64,7 @@
         border: none;
         margin-top: 10px;
       }
-    
+
       .dropdown-item {
         font-size: 0.9em;
         padding: 15px 8px;
@@ -64,12 +73,10 @@
         align-items: center;
         overflow: hidden;
 
-
         &__icon {
           flex: 1;
           max-width: 30px;
           font-size: 1.2em;
-
         }
 
         &:last-child {
