--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,50 +1,52 @@
 // BASE
-@import './base/fonts';
-@import './base/variables';
-@import './base/layout';
-@import './base/mixins';
+@import "./base/fonts";
+@import "./base/variables";
+@import "./base/layout";
+@import "./base/mixins";
+@import "./base/breakpoints";
 
 // VENDOR
-@import '../../node_modules/normalize.css/normalize.css';
-@import '../../node_modules/bootstrap/dist/css/bootstrap.min.css';
-@import './vendor/bootstrap-theme.css';
-@import './vendor/justconnect.bootstrap.theme';
-@import './vendor/prism.css';
+@import "../../node_modules/normalize.css/normalize.css";
+@import "../../node_modules/bootstrap/dist/css/bootstrap.min.css";
+@import "./vendor/bootstrap-theme.css";
+@import "./vendor/justconnect.bootstrap.theme";
+@import "./vendor/prism.css";
 
 // CARDS
-@import './components/jca-card-timeline';
-@import './components/jca-nav-card';
-@import './components/jca-page-header';
-@import './components/jca-card-group';
-@import './components/jca-card';
-@import './components/jca-card-tags';
-@import './components/jca-card-pricing';
-@import './components/jca-card-feed';
-@import './components/jca-card-notifications';
-@import './components/jca-card-one-time-pin';
-@import './components/jca-credit-card';
+@import "./components/jca-card-timeline";
+@import "./components/jca-nav-card";
+@import "./components/jca-page-header";
+@import "./components/jca-card-group";
+@import "./components/jca-card";
+@import "./components/jca-card-tags";
+@import "./components/jca-card-pricing";
+@import "./components/jca-card-feed";
+@import "./components/jca-card-notifications";
+@import "./components/jca-card-one-time-pin";
+@import "./components/jca-credit-card";
 
 // MISC
-@import './components/jca-code-reference';
-@import './components/jca-list';
-@import './components/jca-pagination';
-@import './components/jca-datatable';
-@import './components/jca-info-card';
-@import './components/jca-conversation';
-@import './components/jca-accordion';
-@import './components/jca-table';
-@import './components/jca-data-card';
-@import './components/jca-ordered-list';
+@import "./components/jca-code-reference";
+@import "./components/jca-list";
+@import "./components/jca-pagination";
+@import "./components/jca-datatable";
+@import "./components/jca-info-card";
+@import "./components/jca-conversation";
+@import "./components/jca-accordion";
+@import "./components/jca-table";
+@import "./components/jca-data-card";
+@import "./components/jca-ordered-list";
+@import "./components/jca-toolbar";
 
 // UTILITIES
-@import './utilities/jca-keyword';
-@import './utilities/jca-helpers';
-@import './utilities/jca-label';
+@import "./utilities/jca-keyword";
+@import "./utilities/jca-helpers";
+@import "./utilities/jca-label";
 
 // OVERRIDES
-@import './overrides/btn';
-@import './overrides/container';
-@import './overrides/dropdown';
+@import "./overrides/btn";
+@import "./overrides/container";
+@import "./overrides/dropdown";
 
 body * {
   font-family: $base_font;
