--- a/src/templates/dashboard.njk
+++ b/src/templates/dashboard.njk
@@ -26,24 +26,24 @@
         </div>
         <ul class="jca-topbar__nav">
           <li class="jca-topbar__nav-item">
-            <div class="jca-topbar__nav-content">
+            <a href="./home.html" class="jca-topbar__nav-content">
               <ion-icon class="jca-topbar__nav-icon" name="home-outline"></ion-icon>
-              <a href="./home.html">Home</a>
-            </div>
+              <span href="./home.html">Home</span>
+            </a>
           </li>
 
           <li class="jca-topbar__nav-item">
-            <div class="jca-topbar__nav-content">
+            <a href="./getting-started.html" class="jca-topbar__nav-content">
               <ion-icon class="jca-topbar__nav-icon" name="browsers-outline"></ion-icon>
-              <a href="./getting-started.html">Getting Started</a>
-            </div>
+              <span>Getting Started<span>
+            </a>
           </li>
 
           <li class="jca-topbar__nav-item dropdown">
             <div class="jca-topbar__nav-content dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
               <ion-icon class="jca-topbar__nav-icon" name="code-download-outline"></ion-icon>
-              <a href="#">Download</a>
+              <span href="#">Download</span>
             </div>
             <div class="dropdown-menu animated fadeInUp" aria-labelledby="dropdownMenuButton">
               <a class="dropdown-item" href="https://github.com/thabotitus/jca-ui-kit" target="_blank">
@@ -58,10 +58,10 @@
           </li>
 
           <li class="jca-topbar__nav-item dropdown d-non">
-            <div class="jca-topbar__nav-content">
+            <a href="./showcase.html" class="jca-topbar__nav-content">
               <ion-icon class="jca-topbar__nav-icon" name="bonfire-outline"></ion-icon>
-              <a href="./showcase.html">Showcase</a>
-            </div>
+              <span>Showcase</span>
+            </a>
           </li>
         </ul>
       </div>
