--- a/src/templates/macros/sidebar.njk
+++ b/src/templates/macros/sidebar.njk
@@ -2,164 +2,173 @@
   <div class="jca-sidebar">
     <ul class="jca-nav-card">
       <li class="jca-nav-card__item {%if activePage == 'home' %} jca-nav-card__item--active {% endif %}">
-        <div class="jca-nav-card__item-icon">
+        <a href="../pages/home.html" class="jca-nav-card__item-icon">
           <ion-icon name="home-outline"></ion-icon>
-        </div>
+        </a>
         <a href="../pages/home.html" class="jca-nav-card__item-link">
           Home
         </a>
       </li>
 
       <li class="jca-nav-card__item {%if activePage == 'vertical-timeline' %} jca-nav-card__item--active {% endif %}">
-        <div class="jca-nav-card__item-icon">
+        <a href="../pages/vertical-timeline.html" class="jca-nav-card__item-icon">
           <ion-icon name="hourglass-outline"></ion-icon>
-        </div>
+        </a>
         <a href="../pages/vertical-timeline.html" class="jca-nav-card__item-link">
           Timeline
         </a>
       </li>
 
       <li class="jca-nav-card__item jca-nav-card__item {%if activePage == 'cards' %} jca-nav-card__item--active {% endif %}">
-        <div class="jca-nav-card__item-icon">
+        <a href="../pages/cards.html" class="jca-nav-card__item-icon">
           <ion-icon name="layers-outline"></ion-icon>
-        </div>
+        </a>
         <a href="../pages/cards.html" class="jca-nav-card__item-link">
           Cards
         </a>
       </li>
 
       <li class="jca-nav-card__item {%if activePage == 'card-group' %} jca-nav-card__item--active {% endif %}">
-        <div class="jca-nav-card__item-icon">
+        <a href="../pages/card-group.html" class="jca-nav-card__item-icon">
           <ion-icon name="grid-outline"></ion-icon>
-        </div>
+        </a>
         <a href="../pages/card-group.html" class="jca-nav-card__item-link">
           Card Group
         </a>
       </li>
 
       <li class="jca-nav-card__item {%if activePage == 'tags' %} jca-nav-card__item--active {% endif %}">
-        <div class="jca-nav-card__item-icon">
+        <a href="../pages/tags.html" class="jca-nav-card__item-icon">
           <ion-icon name="pricetags-outline"></ion-icon>
-        </div>
+        </a>
         <a href="../pages/tags.html" class="jca-nav-card__item-link">
           Tags
         </a>
       </li>
 
       <li class="jca-nav-card__item {%if activePage == 'pricing' %} jca-nav-card__item--active {% endif %}">
-        <div class="jca-nav-card__item-icon">
+        <a href="../pages/pricing.html" class="jca-nav-card__item-icon">
           <ion-icon name="card-outline"></ion-icon>
-        </div>
+        </a>
         <a href="../pages/pricing.html" class="jca-nav-card__item-link">
           Pricing
         </a>
       </li>
 
       <li class="jca-nav-card__item {%if activePage == 'feed' %} jca-nav-card__item--active {% endif %}">
-        <div class="jca-nav-card__item-icon">
+        <a href="../pages/feed.html" class="jca-nav-card__item-icon">
           <ion-icon name="reader-outline"></ion-icon>
-        </div>
+        </a>
         <a href="../pages/feed.html" class="jca-nav-card__item-link">
           Feed
         </a>
       </li>
 
       <li class="jca-nav-card__item {%if activePage == 'notifications' %} jca-nav-card__item--active {% endif %}">
-        <div class="jca-nav-card__item-icon">
+        <a href="../pages/notifications.html" class="jca-nav-card__item-icon">
           <ion-icon name="flash-outline"></ion-icon>
-        </div>
+        </a>
         <a href="../pages/notifications.html" class="jca-nav-card__item-link">
           Notifications
         </a>
       </li>
 
       <li class="jca-nav-card__item {%if activePage == 'one-time-pin' %} jca-nav-card__item--active {% endif %}">
-        <div class="jca-nav-card__item-icon">
+        <a href="../pages/one-time-pin.html" class="jca-nav-card__item-icon">
           <ion-icon name="calculator-outline"></ion-icon>
-        </div>
+        </a>
         <a href="../pages/one-time-pin.html" class="jca-nav-card__item-link">
           One Time Pin
         </a>
       </li>
 
       <li class="jca-nav-card__item {%if activePage == 'credit-card' %} jca-nav-card__item--active {% endif %}">
-        <div class="jca-nav-card__item-icon">
+        <a href="../pages/credit-card.html" class="jca-nav-card__item-icon">
           <ion-icon name="card-outline"></ion-icon>
-        </div>
+        </a>
         <a href="../pages/credit-card.html" class="jca-nav-card__item-link">
           Credit Card
         </a>
       </li>
 
       <li class="jca-nav-card__item {%if activePage == 'pagination' %} jca-nav-card__item--active {% endif %}">
-        <div class="jca-nav-card__item-icon">
+        <a href="../pages/pagination.html" class="jca-nav-card__item-icon">
           <ion-icon name="git-commit-outline"></ion-icon>
-        </div>
+        </a>
         <a href="../pages/pagination.html" class="jca-nav-card__item-link">
           Pagination
         </a>
       </li>
 
       <li class="jca-nav-card__item {%if activePage == 'datatable' %} jca-nav-card__item--active {% endif %}">
-        <div class="jca-nav-card__item-icon">
+        <a href="../pages/datatable.html" class="jca-nav-card__item-icon">
           <ion-icon name="hardware-chip-outline"></ion-icon>
-        </div>
+        </a>
         <a href="../pages/datatable.html" class="jca-nav-card__item-link">
           Datatable
         </a>
       </li>
 
       <li class="jca-nav-card__item {%if activePage == 'info-card' %} jca-nav-card__item--active {% endif %}">
-        <div class="jca-nav-card__item-icon">
+        <a href="../pages/info-card.html" class="jca-nav-card__item-icon">
           <ion-icon name="flower-outline"></ion-icon>
-        </div>
+        </a>
         <a href="../pages/info-card.html" class="jca-nav-card__item-link">
           Info Card
         </a>
       </li>
 
       <li class="jca-nav-card__item {%if activePage == 'conversation' %} jca-nav-card__item--active {% endif %}">
-        <div class="jca-nav-card__item-icon">
+        <a href="../pages/conversation.html" class="jca-nav-card__item-icon">
           <ion-icon name="chatbox-ellipses-outline"></ion-icon>
-        </div>
+        </a>
         <a href="../pages/conversation.html" class="jca-nav-card__item-link">
           Conversation
         </a>
       </li>
 
       <li class="jca-nav-card__item {%if activePage == 'accordion' %} jca-nav-card__item--active {% endif %}">
-        <div class="jca-nav-card__item-icon">
+        <a href="../pages/accordion.html" class="jca-nav-card__item-icon">
           <ion-icon name="menu-outline"></ion-icon>
-        </div>
+        </a>
         <a href="../pages/accordion.html" class="jca-nav-card__item-link">
           Accordion
         </a>
       </li>
 
       <li class="jca-nav-card__item {%if activePage == 'table' %} jca-nav-card__item--active {% endif %}">
-        <div class="jca-nav-card__item-icon">
+        <a href="../pages/table.html" class="jca-nav-card__item-icon">
           <ion-icon name="stop-outline"></ion-icon>
-        </div>
+        </a>
         <a href="../pages/table.html" class="jca-nav-card__item-link">
           Table
         </a>
       </li>
 
       <li class="jca-nav-card__item {%if activePage == 'data-card' %} jca-nav-card__item--active {% endif %}">
-        <div class="jca-nav-card__item-icon">
+        <a href="../pages/data-card.html" class="jca-nav-card__item-icon">
           <ion-icon name="barcode-outline"></ion-icon>
-        </div>
+        </a>
         <a href="../pages/data-card.html" class="jca-nav-card__item-link">
           Data Card
         </a>
       </li>
 
       <li class="jca-nav-card__item {%if activePage == 'ordered-list' %} jca-nav-card__item--active {% endif %}">
-        <div class="jca-nav-card__item-icon">
+        <a href="../pages/ordered-list.html" class="jca-nav-card__item-icon">
           <ion-icon name="list-outline"></ion-icon>
-        </div>
+        </a>
         <a href="../pages/ordered-list.html" class="jca-nav-card__item-link">
           Ordered List
+        </a>
+      </li>
+
+      <li class="jca-nav-card__item {%if activePage == 'ordered-list' %} jca-nav-card__item--active {% endif %}">
+        <a href="../pages/toolbar.html" class="jca-nav-card__item-icon">
+          <ion-icon name="hammer-outline"></ion-icon>
+        </a>
+        <a href="../pages/toolbar.html" class="jca-nav-card__item-link">
+          Toolbar
         </a>
       </li>
     </ul>
