--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -49,7 +49,7 @@
     <!------------------------------------------------
       LEFT COLUMN
     ------------------------------------------------->
-    <div class="col-md-4">
+    <div class="col-12 col-lg-4">
       <div class="jca-info-card">
         <div class="jca-info-card__main">
           <div class="jca-info-card__icon">
@@ -153,7 +153,7 @@
       MIDDLE COLUMN
     ------------------------------------------------->
 
-    <div class="col-md-4">
+    <div class="col-12 col-lg-4">
       <div class="jca-card-otp">
         <div class="jca-card-otp__icon">
           <ion-icon name="finger-print-outline"></ion-icon>
@@ -220,7 +220,7 @@
     <!------------------------------------------------
       RIGHT COLUMN
     ------------------------------------------------->
-    <div class="col-md-4">
+    <div class="col-12 col-lg-4">
       <div class="jca-accordion jca-accordion--gap" id="accordion3">
         <div class="jca-accordion__item">
           <div class="jca-accordion__title" data-toggle="collapse" data-target="#collapseExample3">
