--- a/src/pages/showcase.njk
+++ b/src/pages/showcase.njk
@@ -18,7 +18,7 @@
   
 
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-12 col-lg-6">
       <div class="jca-card-feed">
         <div class="jca-card-feed__author">
           <div class="jca-card-feed__author-name">
