--- a/src/styles/components/_jca-card-group.scss
+++ b/src/styles/components/_jca-card-group.scss
@@ -2,13 +2,25 @@
   @include basic-card;
   display: flex;
   width: 100%;
+  flex-wrap: wrap;
+
+  @include breakpoint(md) {
+    flex-wrap: initial;
+  }
 
   &__item {
-    flex: 1;
+    @include breakpoint(md) {
+      flex: 1;
+      border-left: $default_border;
+      border-top: none;
+    }
+
+    display: flex;
+    width: 100%;
     height: 100px;
     padding: 0 $default_padding;
-    border-left: $default_border;
-    display: flex;
+    border-left: none;
+    border-top: $default_border;
     flex-direction: column;
     justify-content: center;
 
