--- a/src/styles/components/_jca-nav-card.scss
+++ b/src/styles/components/_jca-nav-card.scss
@@ -17,6 +17,7 @@
     width: 100%;
     padding: 0;
     margin: 0;
+    height: 50px;
 
     &-icon {
       flex: 1;
@@ -29,10 +30,14 @@
 
     &-link {
       color: $black;
-      padding: 20px;
       padding-left: 0;
-      display: block;
+      display: none;
       flex: 1;
+
+      @include breakpoint(lg) {
+        display: flex;
+        align-items: center;
+      }
 
       &:hover {
         color: $black !important;
@@ -61,11 +66,5 @@
   .jca-nav-card__item-link {
     // color: $primary !important;
     text-decoration: none;
-  }
-}
-
-.jca-nav-card__item--active:hover {
-  .jca-nav-card__item-link {
-    // color: $primary !important;
   }
 }
