--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -223,7 +223,7 @@
     <div class="col-sm-12 col-lg-4">
       <div class="jca-accordion jca-accordion--gap" id="accordion3">
         <div class="jca-accordion__item">
-          <div class="jca-accordion__title" data-toggle="collapse" data-target="#collapseExample3">
+          <div class="jca-accordion__title" data-bs-toggle="collapse" data-bs-target="#collapseExample3">
             UNBREAKABLE
           </div>
           <div class="jca-accordion__content-wrapper collapse show" id="collapseExample3" data-parent="#accordion3">
@@ -241,7 +241,7 @@
         </div>
 
         <div class="jca-accordion__item">
-          <div class="jca-accordion__title" data-toggle="collapse" data-target="#collapseExample4">
+          <div class="jca-accordion__title" data-bs-toggle="collapse" data-bs-target="#collapseExample4">
            PULP FICTION
           </div>
           <div class="jca-accordion__content-wrapper collapse" id="collapseExample4" data-parent="#accordion3">
