--- a/src/pages/accordion.njk
+++ b/src/pages/accordion.njk
@@ -23,7 +23,7 @@
             <h6 class="text-uppercase mb-20">Without a gap</h6>
             <div class="jca-accordion" id="accordion1">
               <div class="jca-accordion__item">
-                <div class="jca-accordion__title" data-toggle="collapse" data-target="#collapseExample1">
+                <div class="jca-accordion__title" data-bs-toggle="collapse" data-bs-target="#collapseExample1">
                   SECTION 1
                 </div>
                 <div class="jca-accordion__content-wrapper collapse show" id="collapseExample1" data-parent="#accordion1">
@@ -34,7 +34,7 @@
               </div>
 
               <div class="jca-accordion__item">
-                <div class="jca-accordion__title" data-toggle="collapse" data-target="#collapseExample2">
+                <div class="jca-accordion__title" data-bs-toggle="collapse" data-bs-target="#collapseExample2">
                   SECTION 2
                 </div>
                 <div class="jca-accordion__content-wrapper collapse" id="collapseExample2" data-parent="#accordion1">
@@ -48,7 +48,7 @@
             <h6 class="text-uppercase mb-20">With a gap</h6>
             <div class="jca-accordion jca-accordion--gap" id="accordion2">
               <div class="jca-accordion__item">
-                <div class="jca-accordion__title" data-toggle="collapse" data-target="#collapseExample3">
+                <div class="jca-accordion__title" data-bs-toggle="collapse" data-bs-target="#collapseExample3">
                   SECTION 3
                 </div>
                 <div class="jca-accordion__content-wrapper collapse show" id="collapseExample3" data-parent="#accordion2">
@@ -59,7 +59,7 @@
               </div>
 
               <div class="jca-accordion__item">
-                <div class="jca-accordion__title" data-toggle="collapse" data-target="#collapseExample4">
+                <div class="jca-accordion__title" data-bs-toggle="collapse" data-bs-target="#collapseExample4">
                   SECTION 4
                 </div>
                 <div class="jca-accordion__content-wrapper collapse" id="collapseExample4" data-parent="#accordion2">
@@ -76,7 +76,7 @@
             <code class="language-html">
 &lt;div class="jca-accordion" id="accordion1"&gt;
   &lt;div class="jca-accordion__item"&gt;
-    &lt;div class="jca-accordion__title" data-toggle="collapse" data-target="#collapseExample1"&gt;
+    &lt;div class="jca-accordion__title" data-bs-toggle="collapse" data-bs-target="#collapseExample1"&gt;
       SECTION 1
     &lt;/div&gt;
     &lt;div class="jca-accordion__content-wrapper collapse show" id="collapseExample1" data-parent="#accordion1"&gt;
@@ -87,7 +87,7 @@
   &lt;/div&gt;
 
   &lt;div class="jca-accordion__item"&gt;
-    &lt;div class="jca-accordion__title" data-toggle="collapse" data-target="#collapseExample2"&gt;
+    &lt;div class="jca-accordion__title" data-bs-toggle="collapse" data-bs-target="#collapseExample2"&gt;
       SECTION 2
     &lt;/div&gt;
     &lt;div class="jca-accordion__content-wrapper collapse" id="collapseExample2" data-parent="#accordion1"&gt;
